Menu works with methods, but no option to return to previous option yet

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ replay_pid*
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
+!.vscode/package.json
+!.vscode/package-lock.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
